--- a/proyecto/templates/login.html
+++ b/proyecto/templates/login.html
@@ -1,8 +1,13 @@
 {% extends "base.html" %}
- 
+
+{%block page_head%}
+    <div class="page-header">
+        <h1> ACCEDE A TU CUENTA </h1>
+    </div>
+{%endblock%}
 {% block content %}
     {% if form.errors %}
-        <p>Your username and password didn't match. Please try again.</p>
+        <p>Su nombre de usuario y contraseña no coinciden. Por favor, inténtelo de nuevo.</p>
     {% endif %}
  
     <form method="post" action="{% url 'django.contrib.auth.views.login' %}">
@@ -18,7 +23,7 @@
             </tr>
         </table>
  
-        <input type="submit" value="login"/> <input type="hidden" name="next"
+        <input type="submit" value="Acceder"/> <input type="hidden" name="next"
                                                     value="{{ next }}"/>
     </form>
  
