--- a/proyecto/templates/base.html
+++ b/proyecto/templates/base.html
@@ -1,19 +1,38 @@
+ {% load static %}
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<title>{% block head_title %} {% endblock %}</title>
-		{% block head %}
-		<ul>
-			<li><a href='{% url "signup" %}'> REGISTRARSE </a></li>
-			<li><a href='{% url "login" %}'> ACCEDE A TU CUENTA </a></li>
-		</ul>
 
+{%block page_head%}
+    <div class="page-header">
+    	<h1><a>IRC - BOT</a></h1>
+	</div>
+    	
+{%endblock%}
+
+		<title>{% block head_title %} {% endblock %}</title>
+		<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
+	    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
+        <link rel="stylesheet" href="{% static 'css/blog.css' %}">
+        <link href="https://fonts.googleapis.com/css?family=Lobster,subset=latin,latin-ext" rel="stylesheet" type="text/css">
+		
+		{% block head %}
+
+		<div>
+			<ul>
+				<li><a href='{% url "signup" %}'> REGISTRARSE </a></li>
+				<li><a href='{% url "login" %}'> ACCEDE A TU CUENTA </a></li>
+				<div><hr></div>
+			</ul>
+		</div>
 		{% endblock %}    
 	</head>
 
 	<body>
-		{% block content %}
-		{% endblock %}    
-	</body>
+		<div class="col-md-8">
+			{% block content %}
 
+			{% endblock %}    
+		</div>
+	</body>
 </html>
