--- a/proyecto/templates/inicio.html
+++ b/proyecto/templates/inicio.html
@@ -4,13 +4,19 @@
     INICIO
 {% endblock %}
 
+{%block page_head%}
+    <div class="page-header">
+        <h1> {{ titulo }} </h1>
+    </div>
+{%endblock%}
+
 {% block head %}
-    <h1> {{ titulo }} </h1>
     <ul>
         <li><a href='{% url "crear" %}'> CREAR BOT </a></li>
         <li><a href='{% url "parar" %}'> PARAR HEBRA </a></li>
         <li><a href='{% url "estado" %}'> ESTADO DEL BOT </a></li>        
         <li><a href='{% url "msg_db" %}'> VISUALIZAR MENSAJES CAPTURADOS </a></li>
+        <div><hr></div>
     </ul>
 {% endblock %}
 
