--- a/proyecto/templates/msg_db.html
+++ b/proyecto/templates/msg_db.html
@@ -3,31 +3,123 @@
 	MSG_DB
 {% endblock %}
 
+{%block page_head%}
+    <div class="page-header">
+        <h1> {{ titulo }} </h1>
+    </div>
+{%endblock%}
+
 {% block head %}
-	<h1> {{ titulo }} </h1>
 	<ul>
 		<li><a href='{% url "inicio" %}'> INICIO </a></li>
 		<li><a href='{% url "crear" %}'> CREAR BOT </a></li>
 		<li><a href='{% url "parar" %}'> PARAR HEBRA </a></li>
 		<li><a href='{% url "estado" %}'> ESTADO DEL BOT </a></li>
+		<div><hr></div>
 	</ul>
 {% endblock %}
 
+
 <body>
 	{% block content %}
+	    <div id="freeow" class="freeow freeow-bottom-right"></div>
+		Introduzca el ID del BOT que quieres consultar.
+			{% if form %}  <!-- Para que aparezca el boton de registrar -->
+				<form method = 'POST' action = ''>{% csrf_token %}
+					{{ form.as_p}}
+					<input type = 'submit' value = 'Consultar'>
+				</form>
+			{% endif %}
+
+			{%if estado%}
+				<p></p>
+				<div class="panel panel-primary">
+					<div class="panel-heading" >
+						<h3 class="panel-title">MENSAJES CAPTURADOS POR EL BOT </h3>
+						<h3 class="panel-title"> </h3>
+					</div>
+				</div>
+
+				<div class="col-xs-12 col-sm-6 placeholder datos_item" >
+					<div class="panel panel-primary">
+					</div>
+
+					<br>
+					<div class="col-xs-12 col-sm-6 placeholder datos_item">
+						ID MENSAJE
+						<div class="panel panel-primary">
+							{{ID_MSG }}
+						</div>
+
+						<br>
+						<hr>
+
+					</div>
+
+					<div class="col-xs-12 col-sm-6 placeholder datos_item">
+						FECHA DE LA CAPTURA
+						<div class="panel panel-primary">
+							{{ FECHA }}
+						</div>
+						<br>
+						<hr>
+
+					</div>
+					<div class="col-xs-12 col-sm-6 placeholder datos_item">
+						CANAL ANALIZADO
+						<div class="panel panel-primary">
+							{{ CANAL }}
+						</div>
+
+						<br>
+						<hr>
+					</div>
+				</div>
+
+				<div class="col-xs-12 col-sm-6 placeholder datos_item" >
+					<div class="panel panel-primary">
+					</div>
+					<div class="col-xs-12 col-sm-6 placeholder datos_item">
+						SERVIDOR ANALIZADO
+						<div class="panel panel-primary">
+							{{ SERVIDOR }}
+						</div>
+						<br>
+						<hr>
+					</div>
+
+					<div class="col-xs-12 col-sm-6 placeholder datos_item">
+						USUARIO QUE ENVIA EL MENSAJE
+						<div class="panel panel-primary">
+							{{ USUARIO }}
+						</div>
+						<br>
+						<hr>
+					</div>
 
 
-        <table>
-            <tr>
-            <ul>
-	            {% for i in contenido %}
-	        		<li>{{ contenido.ID_MSG }} </li>
-	      		{% endfor %}
-			</ul>
-            </tr>
+					<div class="col-xs-12 col-sm-6 placeholder datos_item">
+						MENSAJE
+						<div class="panel panel-primary">
+							{{ MENSAJE }}
+						</div>
+						<br>
+						<hr>
+					</div>	
+				</div>
 
-        </table>
+				{% else %}
 
+				<strong>ID_BOT no encontrado.</strong>
+			{% endif %}
 	{% endblock %}
-</body>
 
+
+  <div class="col-md-12 text-center">
+           <ul id="myPager" class="pagination"></ul>
+  </div>
+
+</div>
+    <br>
+    <br>
+</body>
