--- a/proyecto/templates/signup.html
+++ b/proyecto/templates/signup.html
@@ -1,4 +1,11 @@
 {% extends 'base.html' %}
+
+{%block page_head%}
+    <div class="page-header">
+        <h1> {{ titulo }} </h1>
+    </div>
+{%endblock%}
+
 {% block content %}
  
     {% if form.errors %}
@@ -36,7 +43,7 @@
  
         </table>
  
-        <input type="submit" value="login"/>
+        <input type="submit" value="Registrar"/>
     </form>
  
 {% endblock %}
