--- a/proyecto/templates/inicio.html
+++ b/proyecto/templates/inicio.html
@@ -12,14 +12,15 @@
 
 {% block head %}
     <ul>
+        <li><a href='{% url "inicio" %}'> INICIO </a></li>
         <li><a href='{% url "crear" %}'> CREAR BOT </a></li>
-        <li><a href='{% url "parar" %}'> PARAR HEBRA </a></li>
-        <li><a href='{% url "estado" %}'> ESTADO DEL BOT </a></li>        
-        <li><a href='{% url "msg_db" %}'> VISUALIZAR MENSAJES CAPTURADOS </a></li>
+        <li><a href='{% url "parar" %}'> PARAR BOT </a></li>
+        <li><a href='{% url "bot_info" %}'> INFORMACIÓN DEL BOT </a></li>       
+        <li><a href='{% url "mensajes" %}'> VISUALIZAR MENSAJES CAPTURADOS </a></li>        
+        <li><a href='{% url "eventos" %}'> VISUALIZAR EVENTOS GENERADOS </a></li>
         <div><hr></div>
     </ul>
 {% endblock %}
-
 
 {% block content %}
     Bienvenido. 
@@ -27,45 +28,46 @@
         <p>Estos son sus datos:</p>
         <table>
             <tr>
-                <td>{{ user.username.label_tag }}</td>
+                <td>USUARIO: {{ user.username.label_tag }}</td>
                 <td>{{ user.username }}</td>
             </tr>
 
             <tr>
-                <td>{{ user.email.label_tag }}</td>
+                <td>EMAIL: {{ user.email.label_tag }}</td>
                 <td>{{ user.email }}</td>
             </tr>
 
             <tr>
-                <td>{{ user.first_name.label_tag }}</td>
+                <td>NOMBRE: {{ user.first_name.label_tag }}</td>
                 <td>{{ user.first_name }}</td>
             </tr>
 
             <tr>
-                <td>{{ user.last_name.label_tag }}</td>
+                <td>APELLIDOS: {{ user.last_name.label_tag }}</td>
                 <td>{{ user.last_name }}</td>
             </tr>
 
             <tr>
-                <td>{{ user.date_joined.label_tag }}</td>
+                <td>REGISTRO: {{ user.date_joined.label_tag }}</td>
                 <td>{{ user.date_joined }}</td>
             </tr>
 
             <tr>
-                <td>{{ user.last_login.label_tag }}</td>
+                <td>ÚLTIMO ACCESO: {{ user.last_login.label_tag }}</td>
                 <td>{{ user.last_login }}</td>
             </tr>
 
         </table>
+        <hr>
     </body>
 
-
-    {% if form %}  
+    <!-- {% if form %}   -->
         <!-- Para que aparezca el boton de registrar -->
-        <form method = 'POST' action = ''>{% csrf_token %}
-            {{ form.as_p }} 
-            <input type = 'submit' value = 'Añadir información'>
-        </form>
-    {% endif %}
+        <!-- <form method = 'POST' action = ''>{% csrf_token %} -->
+            <!-- {{ form.as_p }}  -->
+            <!-- <input type = 'submit' value = 'Añadir información'> -->
+        <!-- </form> -->
+    <!-- {% endif %} -->
+
 {% endblock %}
 
