--- a/proyecto/templates/login.html
+++ b/proyecto/templates/login.html
@@ -1,30 +1,38 @@
+<!DOCTYPE html>
+<html>
 {% extends "base.html" %}
 
 {%block page_head%}
-    <div class="page-header">
-        <h1> ACCEDE A TU CUENTA </h1>
-    </div>
+<div class="page-header">
+    <h1> ACCEDE A TU CUENTA </h1>
+</div>
 {%endblock%}
+
 {% block content %}
-    {% if form.errors %}
-        <p>Su nombre de usuario y contraseña no coinciden. Por favor, inténtelo de nuevo.</p>
-    {% endif %}
- 
-    <form method="post" action="{% url 'django.contrib.auth.views.login' %}">
+
+{% if form.errors %}
+<p>Su nombre de usuario y contraseña no coinciden. Por favor, inténtelo de nuevo.</p>
+{% endif %}
+
+<head>
+    <title>Login</title>
+</head>
+
+<body>
+    <form method="POST">
         {% csrf_token %}
-        <table>
-            <tr>
-                <td>{{ form.username.label_tag }}</td>
-                <td>{{ form.username }}</td>
-            </tr>
-            <tr>
-                <td>{{ form.password.label_tag }}</td>
-                <td>{{ form.password }}</td>
-            </tr>
-        </table>
- 
-        <input type="submit" value="Acceder"/> <input type="hidden" name="next"
-                                                    value="{{ next }}"/>
+        <p>
+            <label>Username</label>
+            <input type="text" name="username">
+        </p>
+        <p>
+            <label>Password</label>
+            <input type="password" name="password">
+        </p>
+        <button type="submit">Login</button>
     </form>
- 
+</body>
 {% endblock %}
+
+</html>
+
