--- a/proyecto/templates/parar.html
+++ b/proyecto/templates/parar.html
@@ -18,6 +18,8 @@
 		<li><a href='{% url "bot_info" %}'> INFORMACIÓN DEL BOT </a></li>		
 		<li><a href='{% url "mensajes" %}'> VISUALIZAR MENSAJES CAPTURADOS </a></li>		
 		<li><a href='{% url "eventos" %}'> VISUALIZAR EVENTOS GENERADOS </a></li>
+		<br><button type="submit"><a href='{% url "login" %}'> LOGOUT </a></button>
+
 		<div><hr></div>
 	</ul>
 {% endblock %}
