--- a/proyecto/templates/msg_db.html
+++ b/proyecto/templates/msg_db.html
@@ -15,6 +15,8 @@
 		<li><a href='{% url "crear" %}'> CREAR BOT </a></li>
 		<li><a href='{% url "parar" %}'> PARAR HEBRA </a></li>
 		<li><a href='{% url "estado" %}'> ESTADO DEL BOT </a></li>
+		<br><button type="submit"><a href='{% url "login" %}'> LOGOUT </a></button>
+
 		<div><hr></div>
 	</ul>
 {% endblock %}
